--- a/css/main.css
+++ b/css/main.css
@@ -98,18 +98,56 @@ textarea {
    ========================================================================== */
 
 
+#wrapper {
+    max-width: 300px;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+#wrapper img {
+    display: block;
+    margin: 0 auto;
+}
 
 
+.button {
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+
+    width: 300px;
+    height: 60px;
+
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    letter-spacing: 4px;
+    text-decoration: none;
+
+    transition: all 0.3s ease 0s;
+}
 
 
+.pledge {
+    background: rgba(56,70,77,0.80);
+    border-radius: 6px;
+    color: #FFFFFF;
+    font-weight: bold;
+}
 
+.pledge:hover {
+    background: rgba(56,70,77,1.0);
+}
 
+.whitepaper {
+    border: 1px solid #38464D;
+    border-radius: 6px;
+    color: #38464D;
+}
 
-
-
-
-
-
+.whitepaper:hover {
+    background: rgba(56,70,77,0.05);
+}
 
 
 
